#30 fix: merchant card 레포 수정